--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,147 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  outline: none;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  background: #edeff1;
+}
+
+.container {
+  display: flex;
+}
+
+.main.container {
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.topbar {
+  background: #2196f3;
+  color: white;
+  padding: 2em;
+  text-align: center;
+}
+
+.topbar > span {
+  font-style: italic;
+  padding: 0.5em;
+  animation: x-animation 2s ease-out;
+  display: inline-block;
+}
+
+@keyframes x-animation {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.data.container {
+  flex-direction: column-reverse;
+  height: 100%;
+  justify-content: space-evenly;
+}
+
+.balances.container {
+  justify-content: space-around;
+}
+
+.amount {
+  text-align: center;
+  font-size: 25px;
+  position: relative;
+}
+
+.amount > .coin {
+  font-size: 10px;
+  display: block;
+  color: #283593;
+}
+
+.selector {
+  appearance: none;
+  border: none;
+  border-radius: 0;
+  background: #283593;
+  color: white;
+  font-size: 20px;
+  margin: 0;
+  padding: 0.5em;
+  transition: all 300ms;
+  height: auto;
+  width: 60px;
+  border-top: 1px solid #283593;
+  border-bottom: 1px solid #283593;
+  border-right: 1px solid #283593;
+  cursor: pointer;
+}
+
+.controls.container {
+  justify-content: center;
+}
+
+.quantity.wrapper {
+  position: relative;
+}
+
+.quantity.wrapper:after {
+  content: attr(data-convertion);
+  right: 1em;
+  bottom: 5px;
+  position: absolute;
+  color: #283593;
+  pointer-events: none;
+}
+
+.input {
+  border-top: 1px solid #283593;
+  border-bottom: 1px solid #283593;
+  border-left: 1px solid #283593;
+  padding: 0 1em;
+  font-size: 20px;
+  height: 100%;
+}
+
+.buttons.container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.button {
+  flex: 1;
+  border: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 2em;
+  cursor: pointer;
+  color: white;
+}
+
+.button:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+  transition: all 300ms;
+}
+
+.button.buy-button {
+  background: #0d47a1;
+}
+
+.button.sell-button {
+  background: #1565c0;
 }
